fix modal on mobile

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -150,7 +150,7 @@ body.modal .close-modal {
 }
 
 body .modal {
-	top: -100vh;
+	top: -120vh;
 }
 
 body.modal .modal {
